crates/formatter/tests/snapshots/snapshots__migrations__000376_task_status_notifications.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Remove Task 'working' transition template notification
delete from notification_templates
where id = 'bd4b7168-d05e-4e19-ad0f-3593b77aa90f';
-- Remove Task 'idle' transition template notification
delete from notification_templates
where id = 'd4a6271c-cced-4ed0-84ad-afd02a9c7799';
