crates/formatter/tests/snapshots/snapshots__migrations__000381_add_task_audit.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type resource_type add value if not exists 'task';
