crates/formatter/tests/snapshots/snapshots__migrations__000384_add_workspace_share_scope.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op: keep enum values to avoid dependency churn.
-- If strict removal is required, create a new enum type without these values,
-- cast columns, drop the old type, and rename.
